hphp/test/slow/parser/async_bad_tr.php.expectf

Fatal error: The 'async' annotation cannot be used on 'abstract' methods or methods inside of interfaces. in %s/async_bad_tr.php on line 3
